app/assets/css/style.css
/* ... */
body,
.light-mode,
.dark-mode {
  background: var(--primary-background);
  color: var(--primary-color); }

.is-error {
  color: var(--error-color); }

html {
  font-family: "Roboto Slab", "Times New Roman", Times, serif;
  line-height: 1.7;
  font-size: 18px; }

h1, h2, h3, h4, h5, h6 {
  font-family: "Roboto", Arial, sans-serif; }

@media print {
  a[href^="http"]:after,
  a[href^="mailto"]:after,
  a[href^="tel"]:after {
    content: " [" attr(href) "]";
    overflow-wrap: break-word; } }

.content {
  font-size: 18px; }
  .content input, .content select, .content textarea {
    line-height: 1.5;
    padding: 3px 8px; }
  .content h1 {
    font-size: 40px; }
  .content h2 {
    font-size: 36px; }
  .content h3 {
    font-size: 28px; }
  .content h4 {
    font-size: 24px; }
  .content h5 {
    font-size: 22px; }
  .content h6 {
    font-size: 20px; }

.content p,
.p {
  display: block;
  margin: 20px 0; }

.content > p:first-child,
.p:first-child {
  margin-top: 0; }

.content > p:last-child,
.p:last-child {
  margin-bottom: 0; }

.content:nth-child(n+2) {
  margin-top: 18px; }

.content > p:last-child {
  margin-bottom: 18px; }

.content a,
.a {
  cursor: pointer;
  color: var(--primary-color);
  text-decoration: none;
  background: linear-gradient(to top, var(--highlight-bar) 0%, var(--highlight-bar) 20%, transparent 20.1%, transparent 100%); }
  .content a:hover, .content a:focus,
  .a:hover,
  .a:focus {
    background: linear-gradient(to top, var(--highlight-bar-active) 0%, var(--highlight-bar-active) 20%, transparent 20.1%, transparent 100%); }

.content blockquote,
.blockquote {
  display: block;
  position: relative;
  margin-left: 10px;
  margin-right: 10px;
  padding: 0 30px; }
  .content blockquote:before,
  .blockquote:before {
    content: "“";
    font-size: 60px;
    line-height: 1;
    position: absolute;
    top: 0;
    left: 0; }
  .content blockquote cite:before,
  .blockquote cite:before {
    content: "― "; }

.content code,
.code,
.content var,
.var {
  display: inline;
  background: var(--offset-background);
  color: var(--offset-color);
  padding: 3px 7px;
  border-radius: 5px;
  font-family: monospace;
  white-space: pre;
  tab-size: 4;
  -moz-tab-size: 4;
  max-width: 100%;
  overflow: auto; }
  .content code.tag::before,
  .code.tag::before,
  .content var.tag::before,
  .tag.var::before {
    content: "<"; }
  .content code.tag::after,
  .code.tag::after,
  .content var.tag::after,
  .tag.var::after {
    content: ">"; }

.content .code--block,
.code--block {
  display: block;
  min-height: 30px;
  padding: 0 7px;
  margin: 20px 0; }
  .content .code--block:first-child,
  .code--block:first-child {
    margin-top: 0; }
  .content .code--block:last-child,
  .code--block:last-child {
    margin-bottom: 0; }

.code--output {
  opacity: 0.6; }

.code__entry {
  display: block; }
  .code__entry.table {
    margin: 3px 0; }
    .code__entry.table td, .code__entry.table th {
      padding: 0 10px;
      border: 0;
      border-left: 1px solid var(--offset-border-low-contrast); }
      .code__entry.table td:first-child, .code__entry.table th:first-child {
        border-left: 0; }
    .code__entry.table th {
      text-align: left;
      border-bottom: 1px solid var(--offset-border-low-contrast); }

.content kbd,
.kbd {
  display: inline-block;
  padding: 0 5px;
  border-radius: 5px;
  border: 1px solid var(--border);
  box-shadow: 0 2px 5px var(--shadow);
  font-family: monospace; }

.content ul, .content ol {
  padding-left: 20px; }
  .content ul > li, .content ol > li {
    margin: 9px 0; }

.content hr {
  margin: 36px 0;
  border: none;
  border-bottom: 1px solid var(--border); }

.content h4 {
  margin-bottom: 0; }
  .content h4 + p,
  .content h4 + .p {
    margin-top: 0; }

.content table {
  display: block;
  width: 100%;
  overflow: auto;
  border-collapse: collapse; }
  .content table th, .content table td {
    padding: 0 5px;
    border: 1px solid var(--border); }

body {
  padding: 60px 0 160px; }

:root {
  --layout-gap: 20px; }

.layout {
  margin: 0 auto;
  padding: 0 var(--layout-gap);
  max-width: 900px;
  position: relative; }
  .layout > * {
    --layout-gap: 0; }

.layout--wide {
  margin: 0 auto;
  padding: 0 var(--layout-gap);
  max-width: 1200px;
  position: relative; }
  .layout--wide > * {
    --layout-gap: 0; }

.layout--extra-wide {
  margin: 0 auto;
  padding: 0 var(--layout-gap);
  max-width: 1600px;
  position: relative; }
  .layout--extra-wide > * {
    --layout-gap: 0; }

.grid {
  padding: 0;
  list-style: none;
  margin-left: -20px; }
  .grid > .grid__item {
    float: left;
    padding-left: 20px; }
  .grid.grid-rev > .grid__item {
    float: right; }

.grid-v {
  padding: 0;
  list-style: none;
  margin-top: -20px; }
  .grid-v > .grid__item {
    padding-top: 20px; }

.grid--flush {
  padding: 0;
  list-style: none;
  margin-left: 0; }
  .grid--flush > .grid__item {
    float: left;
    padding-left: 0; }
  .grid--flush.grid-rev > .grid__item {
    float: right; }

.grid-v--flush {
  padding: 0;
  list-style: none;
  margin-top: 0; }
  .grid-v--flush > .grid__item {
    padding-top: 0; }

.grid--tight {
  padding: 0;
  list-style: none;
  margin-left: -10px; }
  .grid--tight > .grid__item {
    float: left;
    padding-left: 10px; }
  .grid--tight.grid-rev > .grid__item {
    float: right; }

.grid-v--tight {
  padding: 0;
  list-style: none;
  margin-top: -10px; }
  .grid-v--tight > .grid__item {
    padding-top: 10px; }

.grid--loose {
  padding: 0;
  list-style: none;
  margin-left: -40px; }
  .grid--loose > .grid__item {
    float: left;
    padding-left: 40px; }
  .grid--loose.grid-rev > .grid__item {
    float: right; }

.grid-v--loose {
  padding: 0;
  list-style: none;
  margin-top: -40px; }
  .grid-v--loose > .grid__item {
    padding-top: 40px; }

.grid--rev > .grid__item {
  float: right; }
/* ... */

